--- a/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
@@ -6,7 +6,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = KSC ILS 09
-	shortID = sID4
+	shortID = JAA09
 	hdg = 90
 	body = Kerbin
 	altMSL = 318.5
@@ -22,7 +22,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = KSC ILS 27
-	shortID = sID4
+	shortID = JAA27
 	hdg = 270
 	body = Kerbin
 	altMSL = 318.5
@@ -41,7 +41,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB Boneyard ILS 09
-	shortID = JAA09
+	shortID = JAB09
 	hdg = 90
 	body = Kerbin
 	altMSL = 786.099976
@@ -57,7 +57,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB Boneyard ILS 27
-	shortID = JAA27
+	shortID = JAB27
 	hdg = 270
 	body = Kerbin
 	altMSL = 785.700012
@@ -77,7 +77,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 09L
-	shortID = JAB09L
+	shortID = JAC09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 164.5
@@ -93,7 +93,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 09R
-	shortID = JAB09R
+	shortID = JAC09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 164.600006
@@ -109,7 +109,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 18L
-	shortID = JAB18L
+	shortID = JAC18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 165.199997
@@ -141,7 +141,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 27L
-	shortID = JAB27L
+	shortID = JAC27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 167
@@ -157,7 +157,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 27R
-	shortID = JAB27R
+	shortID = JAC27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 166.800003
@@ -173,7 +173,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 36L
-	shortID = JAB36L
+	shortID = JAC36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 165.100006
@@ -189,7 +189,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N32A ILS 36R
-	shortID = JAB36R
+	shortID = JAC36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 165.100006
@@ -208,7 +208,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 09L
-	shortID = sID4
+	shortID = JAD09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 447.100006
@@ -224,7 +224,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 09R
-	shortID = sID4
+	shortID = JAD09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 447.200012
@@ -240,7 +240,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 18L
-	shortID = sID4
+	shortID = JAD18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 447.799988
@@ -256,7 +256,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 18R
-	shortID = sID4
+	shortID = JAD18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 447.799988
@@ -272,7 +272,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 27L
-	shortID = sID4
+	shortID = JAD27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 449.399994
@@ -288,7 +288,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 27R
-	shortID = sID4
+	shortID = JAD27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 449.299988
@@ -304,7 +304,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 36L
-	shortID = sID4
+	shortID = JAD36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 447.600006
@@ -320,7 +320,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N46A ILS 36R
-	shortID = sID4
+	shortID = JAD36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 447.600006
@@ -339,7 +339,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 09L 
-	shortID = sID4
+	shortID = JAE09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 678.400024
@@ -355,7 +355,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 09R
-	shortID = sID4
+	shortID = JAE09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 678.400024
@@ -371,7 +371,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 18L
-	shortID = sID4
+	shortID = JAE18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 678.799988
@@ -387,7 +387,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 18R
-	shortID = sID4
+	shortID = JAE18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 678.799988
@@ -403,7 +403,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 27L
-	shortID = sID4
+	shortID = JAE27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 680.700012
@@ -419,7 +419,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 27R
-	shortID = sID4
+	shortID = JAE27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 680.700012
@@ -435,7 +435,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 36L
-	shortID = sID4
+	shortID = JAE36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 678.799988
@@ -451,7 +451,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB N76A ILS 36R
-	shortID = sID4
+	shortID = JAE36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 678.700012
@@ -470,7 +470,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 07L
-	shortID = sID4
+	shortID = JAF07L
 	hdg = 72
 	body = Kerbin
 	altMSL = 147.399994
@@ -486,7 +486,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 07R
-	shortID = sID4
+	shortID = JAF07R
 	hdg = 72
 	body = Kerbin
 	altMSL = 147.5
@@ -502,7 +502,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 16L
-	shortID = sID4
+	shortID = JAF16L
 	hdg = 162
 	body = Kerbin
 	altMSL = 149.399994
@@ -518,7 +518,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 16R
-	shortID = sID4
+	shortID = JAF16R
 	hdg = 162
 	body = Kerbin
 	altMSL = 149.399994
@@ -534,7 +534,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 25L
-	shortID = sID4
+	shortID = JAF25L
 	hdg = 252
 	body = Kerbin
 	altMSL = 147.300003
@@ -550,7 +550,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 25R
-	shortID = sID4
+	shortID = JAF25R
 	hdg = 252
 	body = Kerbin
 	altMSL = 147.199997
@@ -566,7 +566,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 34L
-	shortID = sID4
+	shortID = JAF34L
 	hdg = 342
 	body = Kerbin
 	altMSL = 147
@@ -582,7 +582,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S00A ILS 34R
-	shortID = sID4
+	shortID = JAF34R
 	hdg = 342
 	body = Kerbin
 	altMSL = 147.100006
@@ -602,7 +602,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 09L
-	shortID = sID4
+	shortID = JAG09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 428.899994
@@ -618,7 +618,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 09R
-	shortID = sID4
+	shortID = JAG09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 428.700012
@@ -634,7 +634,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 18L
-	shortID = sID4
+	shortID = JAG18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 429.200012
@@ -650,7 +650,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 18R
-	shortID = sID4
+	shortID = JAG18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 429.299988
@@ -666,7 +666,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 27L
-	shortID = sID4
+	shortID = JAG27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 431
@@ -682,7 +682,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 27R
-	shortID = sID4
+	shortID = JAG27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 431.200012
@@ -698,7 +698,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 36L
-	shortID = sID4
+	shortID = JAG36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 429.200012
@@ -714,7 +714,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S05A ILS 36R
-	shortID = sID4
+	shortID = JAG36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 429.100006
@@ -733,8 +733,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 09L
-	shortID = sID4
+	ident = AB S24A ILS 09L
+	shortID = JAH09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 330.200012
@@ -749,8 +749,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 09R
-	shortID = sID4
+	ident = AB S24A ILS 09R
+	shortID = JAH09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 330.399994
@@ -765,8 +765,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 18L
-	shortID = sID4
+	ident = AB S24A ILS 18L
+	shortID = JAH18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 330.700012
@@ -781,8 +781,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 18R
-	shortID = sID4
+	ident = AB S24A ILS 18R
+	shortID = JAH18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 330.700012
@@ -797,8 +797,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 27L
-	shortID = sID4
+	ident = AB S24A ILS 27L
+	shortID = JAH27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 332.700012
@@ -813,8 +813,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 27R
-	shortID = sID4
+	ident = AB S24A ILS 27R
+	shortID = JAH27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 332.5
@@ -829,8 +829,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 36L
-	shortID = sID4
+	ident = AB S24A ILS 36L
+	shortID = JAH36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 330.600006
@@ -845,8 +845,8 @@ NavUtilRunway
 NavUtilRunway
 {
 	custom = False
-	ident = AB 224A ILS 36R
-	shortID = sID4
+	ident = AB S24A ILS 36R
+	shortID = JAH36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 330.5
@@ -866,7 +866,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 09L
-	shortID = sID4
+	shortID = JAI09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 508.700012
@@ -882,7 +882,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 09R
-	shortID = sID4
+	shortID = JAI09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 508.600006
@@ -898,7 +898,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 18L
-	shortID = sID4
+	shortID = JAI18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 509
@@ -914,7 +914,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 18R
-	shortID = sID4
+	shortID = JAI18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 508.899994
@@ -930,7 +930,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 27L
-	shortID = sID4
+	shortID = JAI27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 510.899994
@@ -946,7 +946,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 27R
-	shortID = sID4
+	shortID = JAI27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 511
@@ -962,7 +962,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 36L
-	shortID = sID4
+	shortID = JAI36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 508.799988
@@ -978,7 +978,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S28A ILS 36R
-	shortID = sID4
+	shortID = JAI36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 509
@@ -998,7 +998,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 09L
-	shortID = sID4
+	shortID = JAJ09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 208
@@ -1014,7 +1014,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 09R
-	shortID = sID4
+	shortID = JAJ09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 208.100006
@@ -1030,7 +1030,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 18L
-	shortID = sID4
+	shortID = JAJ18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 208.699997
@@ -1046,7 +1046,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 18R
-	shortID = sID4
+	shortID = JAJ18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 208.699997
@@ -1062,7 +1062,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 27L
-	shortID = sID4
+	shortID = JAJ27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 210.5
@@ -1078,7 +1078,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 27R
-	shortID = sID4
+	shortID = JAJ27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 210.300003
@@ -1094,7 +1094,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 36L
-	shortID = sID4
+	shortID = JAJ36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 208.600006
@@ -1110,7 +1110,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S37A ILS 36R
-	shortID = sID4
+	shortID = JAJ36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 208.600006
@@ -1129,7 +1129,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 09L
-	shortID = sID4
+	shortID = JAK09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 529.299988
@@ -1145,7 +1145,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 09R
-	shortID = sID4
+	shortID = JAK09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 529.5
@@ -1161,7 +1161,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 18L
-	shortID = sID4
+	shortID = JAK18L
 	hdg = 180
 	body = Kerbin
 	altMSL = 529.700012
@@ -1177,7 +1177,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 18R
-	shortID = sID4
+	shortID = JAK18R
 	hdg = 180
 	body = Kerbin
 	altMSL = 529.799988
@@ -1193,7 +1193,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 27L
-	shortID = sID4
+	shortID = JAK27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 531.799988
@@ -1209,7 +1209,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 27R
-	shortID = sID4
+	shortID = JAK27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 531.700012
@@ -1225,7 +1225,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 36L
-	shortID = sID4
+	shortID = JAK36L
 	hdg = 360
 	body = Kerbin
 	altMSL = 529.700012
@@ -1241,7 +1241,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = AB S72A ILS 36R
-	shortID = sID4
+	shortID = JAK36R
 	hdg = 360
 	body = Kerbin
 	altMSL = 529.700012
@@ -1261,7 +1261,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = C. Yeager ILS 09
-	shortID = sID4
+	shortID = JAL09
 	hdg = 90
 	body = Kerbin
 	altMSL = 12
@@ -1277,7 +1277,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = C. Yeager ILS 18
-	shortID = sID4
+	shortID = JAL18
 	hdg = 180
 	body = Kerbin
 	altMSL = 11.6000004
@@ -1293,7 +1293,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = C. Yeager ILS 27
-	shortID = sID4
+	shortID = JAL27
 	hdg = 270
 	body = Kerbin
 	altMSL = 12.1999998
@@ -1309,7 +1309,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = C. Yeager ILS 36
-	shortID = sID4
+	shortID = JAL36
 	hdg = 360
 	body = Kerbin
 	altMSL = 12.5
@@ -1329,7 +1329,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = CMcAuliffe ILS 09L
-	shortID = sID4
+	shortID = JAM09L 
 	hdg = 90
 	body = Kerbin
 	altMSL = 118.599998
@@ -1345,7 +1345,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = CMcAuliffe ILS 09R
-	shortID = sID4
+	shortID = JAM09R
 	hdg = 90
 	body = Kerbin
 	altMSL = 118.599998
@@ -1361,7 +1361,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = CMcAuliffe ILS 27L
-	shortID = sID4
+	shortID = 27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 117.099998
@@ -1377,7 +1377,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = CMcAuliffe ILS 27R
-	shortID = sID4
+	shortID = JAM27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 117
@@ -1397,7 +1397,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Darude ILS 09L
-	shortID = sID4
+	shortID = JAN09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 164.800003
@@ -1413,7 +1413,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Darude ILS 09R
-	shortID = sID4
+	shortID = JAN09R 
 	hdg = 90
 	body = Kerbin
 	altMSL = 165.199997
@@ -1429,7 +1429,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Darude ILS 27L
-	shortID = sID4
+	shortID = JAN27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 165.199997
@@ -1445,7 +1445,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Darude ILS 27R
-	shortID = sID4
+	shortID = JAN27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 164.899994
@@ -1465,7 +1465,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Island ILS 09
-	shortID = sID4
+	shortID = JAO09
 	hdg = 90
 	body = Kerbin
 	altMSL = 483.600006
@@ -1481,7 +1481,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Island ILS 27
-	shortID = sID4
+	shortID = JAO27
 	hdg = 270
 	body = Kerbin
 	altMSL = 483.600006
@@ -1502,7 +1502,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Welcome ILS 09L
-	shortID = sID4
+	shortID = JAP09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 454.799988
@@ -1518,7 +1518,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Welcome ILS 09R
-	shortID = sID4
+	shortID = JAP09L
 	hdg = 90
 	body = Kerbin
 	altMSL = 455
@@ -1534,7 +1534,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Welcome ILS 27L
-	shortID = sID4
+	shortID = JAP27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 454.5
@@ -1550,7 +1550,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = Welcome ILS 27R
-	shortID = sID4
+	shortID = JAP27R
 	hdg = 270
 	body = Kerbin
 	altMSL = 454.299988
