--- a/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
@@ -37,6 +37,10 @@ CONTRACT_GROUP
     {
         type = List<int>	
 		siteFltDistance = [0,31,150,555,605,732,803,1378,1416,1898,2491,2514,2560,2720,2750,2877]
+		siteRegionalA = [0,0,3,4,5,7,8,11,9,6,6,7,8,4,10,8]
+		siteRegionalB = [0,0,4,5,6,14,9,13,12,10,14,13,15,24,13,12]
+
+		
     }	
 		
 	// Flights with 14-12 passengers
