--- a/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
@@ -1361,7 +1361,7 @@ NavUtilRunway
 {
 	custom = False
 	ident = CMcAuliffe ILS 27L
-	shortID = 27L
+	shortID = JAM27L
 	hdg = 270
 	body = Kerbin
 	altMSL = 117.099998
