--- a/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
@@ -464,132 +464,132 @@ NavUtilRunway
 	innerMarkerDist = 200
 }
 //-------------------------------------------------------------------
-// Airbase N76A
+// Airbase S00A
 //-------------------------------------------------------------------
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 07L
-	shortID = JAF07L
-	hdg = 72
+	custom = True
+	ident = AB S00A ILS 09L
+	shortID = JAF09L
+	hdg = 90
 	body = Kerbin
-	altMSL = 147.399994
-	gsLatitude = -0.160595864
-	gsLongitude = 161.914688
-	locLatitude = -0.149529979
-	locLongitude = 161.948746
+	altMSL = 145.699997
+	gsLatitude = -0.154972225
+	gsLongitude = 161.965134
+	locLatitude = -0.154972196
+	locLongitude = 162.000946
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 07R
-	shortID = JAF07R
-	hdg = 72
+	custom = True
+	ident = AB S00A ILS 09R
+	shortID = JAF09R
+	hdg = 90
 	body = Kerbin
-	altMSL = 147.5
-	gsLatitude = -0.166987747
-	gsLongitude = 161.916672
-	locLatitude = -0.155921862
-	locLongitude = 161.950729
+	altMSL = 145.899994
+	gsLatitude = -0.162915438
+	gsLongitude = 161.965103
+	locLatitude = -0.162915409
+	locLongitude = 162.000916
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 16L
-	shortID = JAF16L
-	hdg = 162
+	custom = True
+	ident = AB S00A ILS 18L
+	shortID = JAF18L
+	hdg = 180
 	body = Kerbin
-	altMSL = 149.399994
-	gsLatitude = -0.0369441584
-	gsLongitude = 161.950165
-	locLatitude = -0.0710013583
-	locLongitude = 161.961227
+	altMSL = 146.100006
+	gsLatitude = -0.0906888247
+	gsLongitude = 161.947968
+	locLatitude = -0.126498684
+	locLongitude = 161.947968
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 16R
-	shortID = JAF16R
-	hdg = 162
+	custom = True
+	ident = AB S00A ILS 18R
+	shortID = JAF18R
+	hdg = 180
 	body = Kerbin
-	altMSL = 149.399994
-	gsLatitude = -0.0395662263
-	gsLongitude = 161.942795
-	locLatitude = -0.0736234263
-	locLongitude = 161.953857
+	altMSL = 146.199997
+	gsLatitude = -0.0906919613
+	gsLongitude = 161.941223
+	locLatitude = -0.126501828
+	locLongitude = 161.941223
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 25L
-	shortID = JAF25L
-	hdg = 252
+	custom = True
+	ident = AB S00A ILS 27L
+	shortID = JAF27L
+	hdg = 270
 	body = Kerbin
-	altMSL = 147.300003
-	gsLatitude = -0.139220804
-	gsLongitude = 162.001831
-	locLatitude = -0.15028663
-	locLongitude = 161.967773
+	altMSL = 148.300003
+	gsLatitude = -0.162886336
+	gsLongitude = 162.054626
+	locLatitude = -0.162886307
+	locLongitude = 162.018814
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 25R
-	shortID = JAF25R
-	hdg = 252
+	custom = True
+	ident = AB S00A ILS 27R
+	shortID = JAF27R
+	hdg = 270
 	body = Kerbin
-	altMSL = 147.199997
-	gsLatitude = -0.132915005
-	gsLongitude = 161.999527
-	locLatitude = -0.143980831
-	locLongitude = 161.965469
+	altMSL = 148.100006
+	gsLatitude = -0.154965594
+	gsLongitude = 162.054657
+	locLatitude = -0.154965565
+	locLongitude = 162.018845
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 34L
-	shortID = JAF34L
-	hdg = 342
+	custom = True
+	ident = AB S00A ILS 36L
+	shortID = JAF36L
+	hdg = 360
 	body = Kerbin
-	altMSL = 147
-	gsLatitude = -0.124530658
-	gsLongitude = 161.97052
-	locLatitude = -0.0904734507
-	locLongitude = 161.959457
+	altMSL = 146.100006
+	gsLatitude = -0.180149481
+	gsLongitude = 161.941254
+	locLatitude = -0.144339621
+	locLongitude = 161.941254
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
 }
 NavUtilRunway
 {
-	custom = False
-	ident = AB S00A ILS 34R
-	shortID = JAF34R
-	hdg = 342
+	custom = True
+	ident = AB S00A ILS 36R
+	shortID = JAF36R
+	hdg = 360
 	body = Kerbin
-	altMSL = 147.100006
-	gsLatitude = -0.121809214
-	gsLongitude = 161.977829
-	locLatitude = -0.0877520069
-	locLongitude = 161.966766
+	altMSL = 146.100006
+	gsLatitude = -0.180180803
+	gsLongitude = 161.947968
+	locLatitude = -0.144370943
+	locLongitude = 161.947968
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
@@ -1495,7 +1495,43 @@ NavUtilRunway
 }
 
 //-------------------------------------------------------------------
-// Welcome
+// S. Musgrave Airport
+//-------------------------------------------------------------------
+NavUtilRunway
+{
+	custom = True
+	ident = S. Musgrave ILS 09
+	shortID = JAQ09
+	hdg = 90
+	body = Kerbin
+	altMSL = 120.099998
+	gsLatitude = -6.62953949
+	gsLongitude = -108.286659
+	locLatitude = -6.62953806
+	locLongitude = -108.25061
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway
+{
+	custom = True
+	ident = S. Musgrave ILS 27
+	shortID = JAQ27
+	hdg = 270
+	body = Kerbin
+	altMSL = 121.699997
+	gsLatitude = -6.62954187
+	gsLongitude = -108.196594
+	locLatitude = -6.62954044
+	locLongitude = -108.232643
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+
+//-------------------------------------------------------------------
+// Welcome Island Airport
 //-------------------------------------------------------------------
 
 NavUtilRunway
@@ -1558,6 +1594,112 @@ NavUtilRunway
 	gsLongitude = -86.4661789
 	locLatitude = -0.412085265
 	locLongitude = -86.5019913
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+
+//-------------------------------------------------------------------
+// VTereshkova Airport
+//-------------------------------------------------------------------
+
+NavUtilRunway
+{
+	custom = True
+	ident = VTereshkova ILS 09
+	shortID = JAR09
+	hdg = 90
+	body = Kerbin
+	altMSL = 2359.6001
+	gsLatitude = 9.80803204
+	gsLongitude = 103.920288
+	locLatitude = 9.80803013
+	locLongitude = 103.956627
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway
+{
+	custom = True
+	ident = VTereshkova ILS 18
+	shortID = JAR18
+	hdg = 180
+	body = Kerbin
+	altMSL = 2358.3999
+	gsLatitude = 9.79555893
+	gsLongitude = 104.055885
+	locLatitude = 9.75974941
+	locLongitude = 104.055885
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway
+{
+	custom = True
+	ident = VTereshkova ILS 27
+	shortID = JAR27
+	hdg = 270
+	body = Kerbin
+	altMSL = 2358.80005
+	gsLatitude = 9.8080349
+	gsLongitude = 104.041016
+	locLatitude = 9.80803299
+	locLongitude = 104.004677
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway
+{
+	custom = True
+	ident = VTereshkova ILS 36
+	shortID = JAR36
+	hdg = 360
+	body = Kerbin
+	altMSL = 2359.19995
+	gsLatitude = 9.71616173
+	gsLongitude = 104.055878
+	locLatitude = 9.75197124
+	locLongitude = 104.055878
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+
+//-------------------------------------------------------------------
+// Y. Gagari Airport
+//-------------------------------------------------------------------
+
+NavUtilRunway
+{
+	custom = True
+	ident = Y. Gagarin ILS 09 
+	shortID = JAS09
+	hdg = 90
+	body = Kerbin
+	altMSL = 4392.2002
+	gsLatitude = 3.32742238
+	gsLongitude = -153.173737
+	locLatitude = 3.32742167
+	locLongitude = -153.137863
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway
+{
+	custom = True
+	ident = Y. Gagarin ILS 27
+	shortID = JAS27
+	hdg = 270
+	body = Kerbin
+	altMSL = 4393.7998
+	gsLatitude = 3.32737923
+	gsLongitude = -153.084412
+	locLatitude = 3.32737851
+	locLongitude = -153.120285
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
