Update 08 - CommercialMultiFlights3.cfg
minor edits

--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/08 - CommercialMultiFlights3.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/08 - CommercialMultiFlights3.cfg
@@ -12,7 +12,7 @@ CONTRACT_TYPE
 {
 //CONTRACT DESCRIPTION
 	sortKey = JKSRGAP08
-	name = JKSRGAP07-CommercialMultiFlights3
+	name = JKSRGAP08-CommercialMultiFlights3
 	title = TKA Flight @/flightNumber - KSC to @JKSRGAP:siteFullName.ElementAt(@/fltLocationSelection) continuing to @JKSRGAP:siteFullName.ElementAt(@/fltLocationSelection3)
 	genericTitle = Large Passenger flights to 2 open bases
 	group = Trans Kerbin Airlines Prime
@@ -49,11 +49,7 @@ CONTRACT_TYPE
 	
 // -----------------------------------------------------------------	
 // REQUIREMENTS FOR CONTRACT TO APPEAR
-// -----------------------------------------------------------------	
-//
-
-// Requires that Flight progress in persistent storage be a value between 0 and x (depending on mods installed) 
-	
+// -----------------------------------------------------------------
 	REQUIREMENT
 	{
 		name = CompleteContract
@@ -150,7 +146,7 @@ CONTRACT_TYPE
 		
 	}
 
-    DATA
+	DATA
 	{
 		type = List<string>
 		site3codetypes = ["A" ,"B"]
@@ -176,7 +172,7 @@ CONTRACT_TYPE
 		type = int
 		fltLocationSelection3 =  @/isA ? @JKSRGAP:siteRegionalA.ElementAt(@/fltLocationSelection) : @JKSRGAP:siteRegionalB.ElementAt(@/fltLocationSelection)
 		hidden = true
-    }
+	}
 
 //Passenger Data
 	DATA
@@ -200,12 +196,11 @@ CONTRACT_TYPE
 // -----------------------------------------------------------------
 //BEHAVIOURS TO DO WHEN CREATING CONTRACT
 // -----------------------------------------------------------------
-//
-	
+
 	BEHAVIOUR
 	{
-        name = SpawnPassengers
-        type = SpawnPassengers
+		name = SpawnPassengers
+		type = SpawnPassengers
         count = @/numPassengers  
 		kerbalType = Tourist
 		removePassengers = true
@@ -234,7 +229,7 @@ CONTRACT_TYPE
 			longitude = @JKSRGAP:siteLON.ElementAt(0)
 			altitude = 0
 		}
-		
+
 		WAYPOINT
 		{
 			name = the Air Terminal
@@ -253,9 +248,8 @@ CONTRACT_TYPE
 			altitude = 0
 			latitude = @JKSRGAP:siteLAT.ElementAt(@/fltLocationSelection)
 			longitude = @JKSRGAP:siteLON.ElementAt(@/fltLocationSelection)
-			
 		}
-		
+
 		WAYPOINT
 		{
 			name = the Air Terminal
@@ -264,7 +258,6 @@ CONTRACT_TYPE
 			latitude = @JKSRGAP:terminalLAT.ElementAt(@/fltLocationSelection)
 			longitude = @JKSRGAP:terminalLON.ElementAt(@/fltLocationSelection)
 			parameter = RequestLandingSite2
-			
 		}
 
 		WAYPOINT
@@ -274,9 +267,7 @@ CONTRACT_TYPE
 			altitude = 0
 			latitude = @JKSRGAP:siteLAT.ElementAt(@/fltLocationSelection3)
 			longitude = @JKSRGAP:siteLON.ElementAt(@/fltLocationSelection3)
-			
 		}
-		
 		WAYPOINT
 		{
 			name = the Air Terminal
@@ -285,7 +276,6 @@ CONTRACT_TYPE
 			latitude = @JKSRGAP:terminalLAT.ElementAt(@/fltLocationSelection3)
 			longitude = @JKSRGAP:terminalLON.ElementAt(@/fltLocationSelection3)
 			parameter = RequestLandingSite3
-			
 		}
 
 	}
@@ -425,7 +415,6 @@ CONTRACT_TYPE
 			}
 			
 		}
-		
 // failed misssion dialog
 		DIALOG_BOX
 		{
@@ -462,7 +451,7 @@ CONTRACT_TYPE
 		title = Your aircraft must meet all requirements
 		define = @/craft
 		completeInSequence = true
-		dissassociateVesselsOnContractFailure = false 
+		dissassociateVesselsOnContractFailure = false
 
 		PARAMETER
 		{
@@ -629,7 +618,7 @@ CONTRACT_TYPE
 			disableOnStateChange = false
 		}
 	}
-		
+	
 	PARAMETER
 	{
 		name = All
@@ -653,16 +642,16 @@ CONTRACT_TYPE
 		PARAMETER
 		{
 			name = Duration
-			type = Duration		
+			type = Duration
 			duration = 30s
 			preWaitText = wait to exchange passengers for:
 			waitingText = exchanging passengers now:
 			completionText = all passengers exchanged!
 			startCriteria = PARAMETER_COMPLETION
 			parameter = LandingSite2
-		}		
+		}
 	}
-	
+
 	PARAMETER
 	{
 		name = RequestTakeoffSite2
@@ -751,7 +740,7 @@ CONTRACT_TYPE
 			disableOnStateChange = true
 		}
 	}
-		
+	
 	PARAMETER
 	{
 		name = All
@@ -770,12 +759,12 @@ CONTRACT_TYPE
 			hideChildren = true
 			hidden = true
 			completeInSequence = true
-		}		
-	
+		}
+		
 		PARAMETER
 		{
 			name = Duration
-			type = Duration		
+			type = Duration
 			duration = 30s
 			preWaitText = wait to exchange passengers for:
 			waitingText = exchanging passengers now:
@@ -890,23 +879,25 @@ CONTRACT_TYPE
 			title = without destroying your aircraft
 			vessel = @/craft
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
 			vessel = @/craft
+			hideChildren = true
 		}
 	}
-	
+
 //Recovery Parameter - Recover Kerbals
+
 	PARAMETER
 	{
         name = RecoverKerbal
         type = RecoverKerbal
 		title = and recover all @/numPassengers passengers
-        completeInSequence = true
+		completeInSequence = true
 		hideChildren = true
     }
 
