--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/02 - LandingRights.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/02 - LandingRights.cfg
@@ -17,7 +17,7 @@ CONTRACT_TYPE
 	genericTitle = A flight to gain landing rights at a new airfield
 	group = Trans Kerbin Airlines Inspections
 	agent = Trans Kerbin Airlines
-
+    notes = ***If you get a flight to the Kerbin Space Center please decline it.&br;***This is an upgrade process to preserve your flight progress&br;&br;
 	description = Trans Kerbin Airlines wants to open routes to @JKSRGAP:siteFullName.ElementAt($jksrgapLandingRights) as soon as possible.&br;&br;Fly out @/numPassengers company executives to @JKSRGAP:siteName.ElementAt($jksrgapLandingRights) to negotiate, wait 30 seconds for the deal to be finalized, take off and return back to KSC.
 	genericDescription = Fly company executives to a new airfields to negotiate landing rights for future commercial flights 
 	synopsis = Fly company executives to a new airfields to negotiate landing rights for future commercial flights
@@ -68,7 +68,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Landing Rights Progress Has Not Finished
-		expression = $jksrgapLandingRights <= 18
+		expression = $jksrgapLandingRights <= @JKSRGAP:siteProgresMax 
 	}
 
 
@@ -136,7 +136,24 @@ CONTRACT_TYPE
 		numAirSickness = Round(Random( 0 , @numPassengers / 6))
 		
 	}
+
+
+// Variables for Flight progress Sync
+	DATA 
+	{
+		// have we reached maximum flight progress?
+		type = bool
+		isMaxProgress = @JKSRGAP:siteProgresMax == $jksrgapFlightProgress
+	}
 	
+	DATA
+	{
+		type = int
+		advFlight = $jksrgapFlightProgress + 1
+		advLanding = $jksrgapLandingRights + 1
+		maxLanding = @JKSRGAP:siteProgresMax +1 
+		
+	}
 
 // -----------------------------------------------------------------
 //BEHAVIOURS TO DO WHEN CREATING CONTRACT
@@ -149,12 +166,25 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 
+
+		CONTRACT_OFFERED
+		{
+			// sync landing rights to 1 more than flight progress
+			// this preserves progress in an upgrade from V2 to V3 code where no landing rights info is in datastore
+			// has no effect on current or new v3 games 
+			// User needs to "decline" the KSC to KSC mission this situation generates
+			type = int		
+			jksrgapLandingRights = $jksrgapFlightProgress + 1
+		}
+		
 		// On success set the progress counter
 		CONTRACT_COMPLETED_SUCCESS
 		{
+		    
 			type = int
-			jksrgapFlightProgress = $jksrgapFlightProgress + 1
-			jksrgapLandingRights = $jksrgapLandingRights + 1
+			// If the user does not decline the upgrade mission to KSC we have a failsafe 
+			jksrgapFlightProgress = @/isMaxProgress ? @JKSRGAP:siteProgresMax : @/advFlight
+			jksrgapLandingRights = @/isMaxProgress ? @/maxLanding : @/advLanding
 			
 		}
 	}
