--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/03 - CommercialFlights1.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/03 - CommercialFlights1.cfg
@@ -69,7 +69,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Flight Progess must have started
-		expression = $jksrgapFlightProgress >= 1
+		expression = $jksrgapFlightProgress >= @JKSRGAP:siteComm1Start
 	}
 	
 
@@ -89,7 +89,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = int
-		fltLocationSelection = Random(1, $jksrgapFlightProgress)
+		fltLocationSelection = Random(@JKSRGAP:siteComm1Start, $jksrgapFlightProgress)
 		hidden = true
 	}
 
