--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/09 - CargoRetrievalFlights.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/09 - CargoRetrievalFlights.cfg
@@ -65,7 +65,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Flight Progess must have completed all landing rights
-		expression = $jksrgapLandingRights > 18
+		expression = $jksrgapLandingRights > @JKSRGAP:siteCargoStart
 	}
 	
 //After mission is complete wait 3 days before offering it again	
@@ -76,7 +76,7 @@ CONTRACT_TYPE
 		type = CompleteContract
 		minCount = 0
 		contractType = JKSRGAP09-Cargo-Flights
-		cooldownDuration = 3d
+		cooldownDuration = 1d
 	}
 	
 // -----------------------------------------------------------------	
@@ -111,7 +111,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = int
-		fltLocationSelection = Random(2,$jksrgapFlightProgress) 																																		   
+		fltLocationSelection = Random(@JKSRGAP:siteComm2Start,$jksrgapFlightProgress) 																																		   
 	}
 
 //  Cargo Destination
