--- a/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
@@ -15,7 +15,25 @@ CONTRACT_GROUP
 	agent = JNSQ KSRGAP
 	maxSimultaneous = 0
 	maxCompletions = 0
-    
+
+	DATA
+	{
+		// Values for site progression and contract avaliability for all missions 
+		type = int
+		// Base 0 = the KSC and is only used as the starting and ending location for flights
+		// how many bases are active for Landing Rights
+		siteProgresMax = 18
+		// What base can small Commercial flights start flying to?
+		siteComm1Start = 1
+		// What base can medium and large Commercial flights, cargo flights and Multi-sites fly to? 
+		siteComm2Start = 2
+		// What base must have landing rights for MultiSite flights be offered?	
+		siteMultiStart = 5
+		// What base must have landing rights for Cargo flights to be offered?	
+		siteCargoStart = 5
+	} 
+
+ 
 	DATA
     {
         type = List<string>
@@ -37,9 +55,10 @@ CONTRACT_GROUP
     {
         type = List<int>	
 		siteFltDistance = [0,31,150,491,555,605,732,803,1378,1416,1636,1898,2491,2514,2560,2720,2750,2877,3161]
+		//Bases by site index number 0 - siteProgresMax variable
 		siteRegionalA =   [0,0,4,5,2,7,8,11,13,10,14,7,5,8,17,6,12,9,9]
 		siteRegionalB =   [0,0,8,9,3,12,16,12,15,14,18,12,16,18,18,16,18,18,16]
-//		siteRegionalB =   [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18]
+
     }	
 		
 	// Flights with 14-12 passengers
