--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/04 - CommercialFlights2.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/04 - CommercialFlights2.cfg
@@ -68,7 +68,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Flight Progess must be at the right level
-		expression = $jksrgapFlightProgress >= 2
+		expression = $jksrgapFlightProgress >= @JKSRGAP:siteComm2Start
 	}
 	
 
@@ -88,7 +88,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = int
-		fltLocationSelection = Random(2, $jksrgapFlightProgress)
+		fltLocationSelection = Random(@JKSRGAP:siteComm2Start, $jksrgapFlightProgress)
 		hidden = true
 	}
 
