--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/07 - CommercialMultiFlights2.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/07 - CommercialMultiFlights2.cfg
@@ -68,7 +68,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Flight Progess must have started
-		expression = $jksrgapFlightProgress >= 2
+		expression = $jksrgapFlightProgress >= @JKSRGAP:siteMultiStart
 	}
 	
 	//Flight progress must have opened the site of the B flight
@@ -95,7 +95,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = int
-		fltLocationSelection = Random(2, $jksrgapFlightProgress)
+		fltLocationSelection = Random(@JKSRGAP:siteComm2Start, $jksrgapFlightProgress)
 		hidden = true
 	}
 
