--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/08 - CommercialMultiFlights3.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/08 - CommercialMultiFlights3.cfg
@@ -64,7 +64,7 @@ CONTRACT_TYPE
 		name = Expression
 		type = Expression
 		title = Flight Progess must have started
-		expression = $jksrgapFlightProgress >= 2
+		expression = $jksrgapFlightProgress >= @JKSRGAP:siteMultiStart
 	}
 	
 	//Flight progress must have opened the site of the B flight
@@ -99,7 +99,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = int
-		fltLocationSelection = Random(2, $jksrgapFlightProgress)
+		fltLocationSelection = Random(@JKSRGAP:siteComm2Start, $jksrgapFlightProgress)
 		hidden = true
 	}
 
